Force integer defaults to integer, specify apikey
