# nitroApi/swagger.json
@@ -303,7 +303,7 @@
 						"in": "query",
 						"description": "which page of results to return",
 						"type": "integer",
-						"default": "1",
+						"default": 1,
 						"minimum": 1,
 						"required": false
 					},
@@ -312,7 +312,7 @@
 						"in": "query",
 						"description": "number of results in each page",
 						"type": "integer",
-						"default": "10",
+						"default": 10,
 						"maximum": 300,
 						"required": false
 					},
@@ -419,7 +419,12 @@
 					"default": {
 						"description": "Unexpected error"
 					}
-				}
+				},
+				"security": [
+					{
+						"api_key": []
+					}
+				]
 			}
 		},
 		"/availabilities": {
@@ -485,7 +490,7 @@
 						"in": "query",
 						"description": "which page of results to return",
 						"type": "integer",
-						"default": "1",
+						"default": 1,
 						"minimum": 1,
 						"required": false
 					},
@@ -494,7 +499,7 @@
 						"in": "query",
 						"description": "number of results in each page",
 						"type": "integer",
-						"default": "10",
+						"default": 10,
 						"maximum": 300,
 						"required": false
 					},
@@ -522,7 +527,12 @@
 					"default": {
 						"description": "Unexpected error"
 					}
-				}
+				},
+				"security": [
+					{
+						"api_key": []
+					}
+				]
 			}
 		},
 		"/broadcasts": {
@@ -632,7 +642,7 @@
 						"in": "query",
 						"description": "which page of results to return",
 						"type": "integer",
-						"default": "1",
+						"default": 1,
 						"minimum": 1,
 						"required": false
 					},
@@ -641,7 +651,7 @@
 						"in": "query",
 						"description": "number of results in each page",
 						"type": "integer",
-						"default": "10",
+						"default": 10,
 						"maximum": 300,
 						"required": false
 					},
@@ -735,7 +745,12 @@
 					"default": {
 						"description": "Unexpected error"
 					}
-				}
+				},
+				"security": [
+					{
+						"api_key": []
+					}
+				]
 			}
 		},
 		"/groups": {
@@ -834,7 +849,7 @@
 						"in": "query",
 						"description": "which page of results to return",
 						"type": "integer",
-						"default": "1",
+						"default": 1,
 						"minimum": 1,
 						"required": false
 					},
@@ -843,7 +858,7 @@
 						"in": "query",
 						"description": "number of results in each page",
 						"type": "integer",
-						"default": "10",
+						"default": 10,
 						"maximum": 300,
 						"required": false
 					},
@@ -884,7 +899,12 @@
 					"default": {
 						"description": "Unexpected error"
 					}
-				}
+				},
+				"security": [
+					{
+						"api_key": []
+					}
+				]
 			}
 		},
 		"/images": {
@@ -962,7 +982,7 @@
 						"in": "query",
 						"description": "which page of results to return",
 						"type": "integer",
-						"default": "1",
+						"default": 1,
 						"minimum": 1,
 						"required": false
 					},
@@ -971,7 +991,7 @@
 						"in": "query",
 						"description": "number of results in each page",
 						"type": "integer",
-						"default": "10",
+						"default": 10,
 						"maximum": 300,
 						"required": false
 					},
@@ -1012,7 +1032,12 @@
 					"default": {
 						"description": "Unexpected error"
 					}
-				}
+				},
+				"security": [
+					{
+						"api_key": []
+					}
+				]
 			}
 		},
 		"/items": {
@@ -1104,7 +1129,7 @@
 						"in": "query",
 						"description": "which page of results to return",
 						"type": "integer",
-						"default": "1",
+						"default": 1,
 						"minimum": 1,
 						"required": false
 					},
@@ -1113,7 +1138,7 @@
 						"in": "query",
 						"description": "number of results in each page",
 						"type": "integer",
-						"default": "10",
+						"default": 10,
 						"maximum": 300,
 						"required": false
 					},
@@ -1175,7 +1200,12 @@
 					"default": {
 						"description": "Unexpected error"
 					}
-				}
+				},
+				"security": [
+					{
+						"api_key": []
+					}
+				]
 			}
 		},
 		"/master_brands": {
@@ -1233,7 +1263,7 @@
 						"in": "query",
 						"description": "which page of results to return",
 						"type": "integer",
-						"default": "1",
+						"default": 1,
 						"minimum": 1,
 						"required": false
 					},
@@ -1242,7 +1272,7 @@
 						"in": "query",
 						"description": "number of results in each page",
 						"type": "integer",
-						"default": "10",
+						"default": 10,
 						"maximum": 300,
 						"required": false
 					},
@@ -1276,7 +1306,12 @@
 					"default": {
 						"description": "Unexpected error"
 					}
-				}
+				},
+				"security": [
+					{
+						"api_key": []
+					}
+				]
 			}
 		},
 		"/people": {
@@ -1329,7 +1364,7 @@
 						"in": "query",
 						"description": "which page of results to return",
 						"type": "integer",
-						"default": "1",
+						"default": 1,
 						"minimum": 1,
 						"required": false
 					},
@@ -1338,7 +1373,7 @@
 						"in": "query",
 						"description": "number of results in each page",
 						"type": "integer",
-						"default": "10",
+						"default": 10,
 						"maximum": 300,
 						"required": false
 					},
@@ -1386,7 +1421,12 @@
 					"default": {
 						"description": "Unexpected error"
 					}
-				}
+				},
+				"security": [
+					{
+						"api_key": []
+					}
+				]
 			}
 		},
 		"/pips": {
@@ -1403,7 +1443,7 @@
 						"in": "query",
 						"description": "which page of results to return",
 						"type": "integer",
-						"default": "1",
+						"default": 1,
 						"minimum": 1,
 						"required": false
 					},
@@ -1412,7 +1452,7 @@
 						"in": "query",
 						"description": "number of results in each page",
 						"type": "integer",
-						"default": "10",
+						"default": 10,
 						"maximum": 300,
 						"required": false
 					},
@@ -1431,7 +1471,12 @@
 					"default": {
 						"description": "Unexpected error"
 					}
-				}
+				},
+				"security": [
+					{
+						"api_key": []
+					}
+				]
 			}
 		},
 		"/promotions": {
@@ -1469,7 +1514,7 @@
 						"in": "query",
 						"description": "which page of results to return",
 						"type": "integer",
-						"default": "1",
+						"default": 1,
 						"minimum": 1,
 						"required": false
 					},
@@ -1478,7 +1523,7 @@
 						"in": "query",
 						"description": "number of results in each page",
 						"type": "integer",
-						"default": "10",
+						"default": 10,
 						"maximum": 300,
 						"required": false
 					},
@@ -1547,7 +1592,12 @@
 					"default": {
 						"description": "Unexpected error"
 					}
-				}
+				},
+				"security": [
+					{
+						"api_key": []
+					}
+				]
 			}
 		},
 		"/schedules": {
@@ -1672,7 +1722,7 @@
 						"in": "query",
 						"description": "which page of results to return",
 						"type": "integer",
-						"default": "1",
+						"default": 1,
 						"minimum": 1,
 						"required": false
 					},
@@ -1681,7 +1731,7 @@
 						"in": "query",
 						"description": "number of results in each page",
 						"type": "integer",
-						"default": "10",
+						"default": 10,
 						"maximum": 300,
 						"required": false
 					},
@@ -1797,7 +1847,12 @@
 					"default": {
 						"description": "Unexpected error"
 					}
-				}
+				},
+				"security": [
+					{
+						"api_key": []
+					}
+				]
 			}
 		},
 		"/services": {
@@ -1837,7 +1892,7 @@
 						"in": "query",
 						"description": "which page of results to return",
 						"type": "integer",
-						"default": "1",
+						"default": 1,
 						"minimum": 1,
 						"required": false
 					},
@@ -1846,7 +1901,7 @@
 						"in": "query",
 						"description": "number of results in each page",
 						"type": "integer",
-						"default": "10",
+						"default": 10,
 						"maximum": 300,
 						"required": false
 					},
@@ -1921,7 +1976,12 @@
 					"default": {
 						"description": "Unexpected error"
 					}
-				}
+				},
+				"security": [
+					{
+						"api_key": []
+					}
+				]
 			}
 		},
 		"/versions": {
@@ -1966,7 +2026,7 @@
 						"in": "query",
 						"description": "which page of results to return",
 						"type": "integer",
-						"default": "1",
+						"default": 1,
 						"minimum": 1,
 						"required": false
 					},
@@ -1975,7 +2035,7 @@
 						"in": "query",
 						"description": "number of results in each page",
 						"type": "integer",
-						"default": "10",
+						"default": 10,
 						"maximum": 300,
 						"required": false
 					},
@@ -2009,7 +2069,12 @@
 					"default": {
 						"description": "Unexpected error"
 					}
-				}
+				},
+				"security": [
+					{
+						"api_key": []
+					}
+				]
 			}
 		},
 		"/": {
@@ -2028,7 +2093,12 @@
 					"default": {
 						"description": "Unexpected error"
 					}
-				}
+				},
+				"security": [
+					{
+						"api_key": []
+					}
+				]
 			}
 		},
 		"/schema": {
@@ -2047,8 +2117,20 @@
 					"default": {
 						"description": "Unexpected error"
 					}
-				}
+				},
+				"security": [
+					{
+						"api_key": []
+					}
+				]
 			}
+		}
+	},
+	"securityDefinitions": {
+		"api_key": {
+			"type": "apiKey",
+			"name": "api_key",
+			"in": "query"
 		}
 	}
 }
